@@ -1,82 +1,67 @@
-<dl i18n:domain="redturtle.portlet.content"
-	tal:define="item view/getItem;
-				item_obj python:view.needObj(item);
-				portlet_class view/getPortletClass"
-	tal:condition="item"
-	tal:attributes="id python:view.getPortletId(item);
-					class string:$portlet_class portlet portletContentPortlet">
+<section i18n:domain="redturtle.portlet.content"
+      	 tal:define="item python:view.item;
+      				       portlet_class view/getPortletClass"
+      	 tal:condition="python:item"
+      	 tal:attributes="id python:view.getPortletId();
+      		               class string:$portlet_class portlet portletContentPortlet">
+  <header class="portletHeader"
+          tal:define="title view/data/portletTitle"
+          tal:condition="title">
+    <h4>${title}</h4>
+  </header>
 
-    <dt tal:define="title view/data/portletTitle"
-		tal:attributes="class view/getClass">
-        <span class="portletTopLeft"></span>
-		<a tal:condition="title"
-		   tal:attributes="href item/getURL">
-		 	<span class="tile"
-				  tal:content="title">Portlet title</span>
-		</a>
-        <span class="portletTopRight"></span>
-    </dt>
+  <section class="portletContent">
+    <tal:showtitle condition="view/data/showTitle">
+      <div class="item-title">
+        <h3><a href="" tal:attributes="href item/absolute_url">${item/Title}</a></h3>
+      </div>
+    </tal:showtitle>
 
-    <dd class="portletItem odd">
-    	<tal:if condition="view/data/showTitle">
-    		<div class="title_item">
-    		 <h3>	
-				  <a href="" tal:attributes="href item/getURL">
-				  	<span tal:replace="item/Title"/>
-				  </a>
-			  </h3>
-			</div>
-		</tal:if>
-		
-    	<div class="image_float" tal:condition="python:view.data.showImage and view.hasImageField(item_obj)"
-             tal:define="scale view/getImageScale">
-        	<img src="" tal:attributes="src string:${item/getURL}/image_${scale};
-										alt item_obj/getImageCaption"/>
-        </div>
-        <div class="descr_item" tal:condition="python:view.data.showDescr and getattr(item,'Description',None)">
-        	<p class="documentDescription" tal:content="structure python:view.getItemDescription(item)"/>
-        </div>
-		<div class="text_item" tal:condition="python:view.data.showText and getattr(item_obj,'getText',None)">
-        	<span tal:replace="structure item_obj/getText"/>
-        </div>
-		<div class="visualClear"></div>
-		<div class="socialLinks"
-		     tal:define="social_providers python:view.socialProviders(item_obj)"
-			 tal:condition="social_providers">
-	        <ul class="sectionBookmarks"
-	            tal:define="portal_url context/@@plone_portal_state/portal_url">
-	            <li tal:repeat="provider social_providers">
-	                <a href=""
-					   class="bookmarkItem"
-					   tal:attributes="href provider/url">
-	                    <img src="" 
-	                         tal:attributes="src string:${portal_url}/++resource++sb_images/${provider/logo}; alt string:${provider/id}" />
-	                    &nbsp;
-	                    <span class="bookmarkId" tal:content="provider/id">reddit</span>
-	                </a>
-	            </li>
-	        </ul>
-	        <div class="visualClear"></div>
-		</div>
-    </dd>
+    <div class="item-image"
+         tal:condition="python:view.data.showImage and scale"
+         tal:define="scale view/getImageScale">
+      <img tal:replace="structure scale"/>
+    </div>
+    <div class="item-description"
+         tal:condition="python:view.data.showDescr and getattr(item,'Description',None)">
+      <p class="documentDescription" tal:content="structure view/getItemDescription"/>
+    </div>
+    <div class="item-text"
+         tal:condition="python:view.data.showText and getattr(item,'text',None)">
+      <span tal:replace="structure item/text/output"/>
+    </div>
+    <div class="social-links"
+         tal:define="social_providers view/socialProviders"
+         tal:condition="social_providers">
+      <ul class="sectionBookmarks"
+          tal:define="portal_url context/@@plone_portal_state/portal_url">
+          <li tal:repeat="provider social_providers">
+              <a href="{provider/url}" class="bookmarkItem">
+                  <img src=""
+                       tal:attributes="src string:${portal_url}/++resource++sb_images/${provider/logo}; alt string:${provider/id}" />
+                  &nbsp;
+                  <span class="bookmarkId" tal:content="provider/id">reddit</span>
+              </a>
+          </li>
+      </ul>
+      <div class="visualClear"></div>
+    </div>
+  </section>
 
-    <dd class="portletFooter more_item" tal:condition="python: view.data.showMore or view.data.showComments">
-        <span class="portletBottomLeft"></span>
-        <tal:comments-show condition="view/data/showComments">
-        	<tal:comments define="comments python:view.getCommentsLen(item_obj)"
-			  	  		  tal:condition="comments">
-				  <a tal:attributes="href string:${item/getURL}#comments">
-				  	<span tal:content="python:view.getCommentsString(comments)"/>
-				  </a>
-				  <span tal:condition="view/data/showMore">|</span>
-			</tal:comments>
+  <footer class="portletFooter" tal:condition="python: view.data.showMore or view.data.showComments">
+    <tal:comments-show condition="view/data/showComments">
+    	<tal:comments define="comments python:view.getCommentsLen()"
+	  	  		        tal:condition="comments">
+		    <a tal:attributes="href string:${item/absolute_url}#comments">
+		  	  <span tal:content="python:view.getCommentsString(comments)"/>
+		    </a>
+		    <span tal:condition="view/data/showMore">|</span>
+	    </tal:comments>
 		</tal:comments-show>
 		<tal:more condition="view/data/showMore">
-			<a href="" tal:attributes="href item/getURL">
+			<a href="${item/absolute_url}">
 				<span i18n:translate="more_link">more...</span>
 			</a>
 		</tal:more>
-        <span class="portletBottomRight"></span>
-    </dd>
-
-</dl>
+  </footer>
+</section>
